--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Meus Objetivos do Ano</title>
 </head>
 <body>
+    k=<link rel="stylesheet" href="style.css">
     <section class="conteudo principal">
-        <h2>Meus Objetivos do Ano </h2> 
+        <h2 class="titulo-principal">Meus Objetivos do Ano </h2> 
         <div class="button">
-            <button class="botão"></button>
-            <button class="botão"></button>
-            <button class="botão"></button>
-            <button class="botão"></button>
-
+            <button class="botão">Concluir o ensino médio</button>
+            <button class="botão">Concluir o ensino médio</button>
+            <button class="botão">Concluir o ensino médio</button>
+            <button class="botão">Concluir o ensino médio</button>
+        </div>
+    </section>
 </body>
 </html>
